This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

03-Dec-2002 (Lars Duening)  (3.3.318)
  - (Makefile) Driver executable renamed from 'driver' to 'ldmud'.
  - (configure, Makefile) The configure script now tries to figure out
      on its own which warning options the compiler supports.
  - (comm.c, erq.h) The erq callbacks can now take the returned
      data as a string instead of an array (suggested by Dafire).
  - (mud/lp-245) Edward S. Marshall found all uses of the new keyword
      'function' in the old mudlib and replaced them by something
      less offensive to the parser (thanks!).

30-Nov-2002 (Lars Duening)  (3.3.317)
  - (comm.c) Fiona provided a number of bugfixes for CHARMODE - thanks!

30-Nov-2002 (Lars Duening)  (3.3.316)
  - (prolang.y) Brainfart: the last patch created a problem, instead of
      solving one. The bug was that "*"::fun() looked at _all_ inherited
      programs, not just the directly inherited ones.

30-Nov-2002 (Lars Duening)  (3.3.315)
  - (prolang.y) When making wildcarded supercalls ("*"::fun()), the compiler
      takes care that each function is called only once (reported by Gnomi).

29-Nov-2002 (Lars Duening)  (3.3.314)
  - (sysmalloc.c) This file is no longer needed (actually it has been
      useless since 3.2.8-dev.188).
  - (dumpstat.c) Didn't compile with MALLOC_sysmalloc.
  - (lex.c) pragma_combine_strings was never initialised with a default.
  - (lex.c) Changed the FLOAT_MIN/FLOAT_MAX predefined to reflect
      the C-float limits, not the C-double limits, as the gamedriver's
      floats are somewhere inbetween the two.

27-Nov-2002 (Lars Duening)  (3.3.313)
  - (patchlevel.h, hosts/be/Makefile, hosts/be/set-version) The version
      flags of the BeOS executable are now read from patchlevel.h and not set
      directly in the BeOS Makefile.

27-Nov-2002 (Lars Duening)  (3.3.312)