@@ -30,15 +30,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 318)
-(Parent-Version lpmud 3-3 317)
-(Version-Log "The configure script tries to determine the compiler's warning options on its own.
-Renamed the executable to 'ldmud'.
-The erq callbacks can now take the returned data as a string instead as an array.
-Replaced occurances of 'function' in the LP-245 mudlib.")
+(Project-Version lpmud 3-3 319)
+(Parent-Version lpmud 3-3 318)
+(Version-Log "Corrected two typos in the Makefile.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 03 Dec 2002 00:26:07 -0700")
+(Checkin-Time "Tue, 03 Dec 2002 01:17:12 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -74,7 +71,7 @@ Replaced occurances of 'function' in the LP-245 mudlib.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.51 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.381 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.382 644))
   (HISTORY (lpmud/f/49_HISTORY 1.287 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -83,7 +80,7 @@ Replaced occurances of 'function' in the LP-245 mudlib.")
   (src/configure (lpmud/d/0_configure 1.19.1.65 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.20 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.4 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.2 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.3 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
@@ -161,7 +158,7 @@ Replaced occurances of 'function' in the LP-245 mudlib.")
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.5 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.6 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.34 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
