@@ -1,6 +1,9 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+03-Dec-2002 (Lars Duening)  (3.3.319)
+  - (Makefile.in) Corrected two typos.
+
 03-Dec-2002 (Lars Duening)  (3.3.318)
   - (Makefile) Driver executable renamed from 'driver' to 'ldmud'.
   - (configure, Makefile) The configure script now tries to figure out
